Finished! Combined code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="Pick the number/letter length of the code:" />
+        android:text="Pick the length of the code:" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -56,17 +56,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:max="7"
+            android:max="5"
             android:min="3"
             android:minWidth="200dp"
-            android:progress="5"
+            android:progress="4"
             android:progressTint="@android:color/holo_purple"
             android:thumbTint="@android:color/holo_purple" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="7" />
+            android:text="5" />
     </LinearLayout>
 
     <Button
