--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -11,7 +11,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
         android:text="hello"
-        android:textSize="30dp"
+        android:textSize="25dp"
+        android:paddingTop="150dp"
         android:id="@+id/text" />
+    <Button
+        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+        android:minWidth="200dp"
+        android:onClick="buttonClicked"
+        android:background="@android:color/holo_purple"
+        android:textColor="@android:color/white"
+        android:text="Play Again"/>
 </LinearLayout>
